Prevent scrolly logo overlapping content on mobile

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -25,7 +25,6 @@
 
 @media screen and (max-width: 600px) {
   .HeroContainer {
-    height: 40vh;
-    padding-top: var(--spacing-extra-loose);
+    height: 65vh;
   }
 }
